--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
     "mocha": "~1.17.1",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.4",
-    "jscs": "~1.2.4"
+    "jscs": "^1.3.0"
   },
   "dependencies": {
     "shelljs": "~0.2.6",
     "yui": "~3.14.1",
-    "nomnom": "~1.6.2",
-    "jscs": "~1.3.0"
+    "nomnom": "~1.6.2"
   }
 }
