--- a/.jshintrc
+++ b/.jshintrc
@@ -57,6 +57,9 @@
     "supernew"      : false,     // true: Tolerate `new function () { ... };` and `new Object;`
     "validthis"     : false,     // true: Tolerate using this in a non-constructor function
 
+    // environments
+    "node": true,
+
     // Legacy
     "onevar"        : true     // true: Allow only one `var` statement per function
 }
